--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,8 +1,8 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/eonzy298/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/eonzy298/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/ktbzi/r513l" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/ktbzi/c11h" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/ktbzi/u12g" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/ktbzi/c8n" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/ktbzi/e4e" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/ktbzi/a12w" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/ktbzi/l3y" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/ktbzi/r10b" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/ktbzi/b9u" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/ktbzi/t7d" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/ktbzi/j5k" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12216420.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/Unknown-10-320x200.jpg"><p align="center">【一线采访】四川大暴雨亲历者谈惊魂一幕</p></a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/eonzy298/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/eonzy298/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/eonzy298/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eonzy298/www/master/t/djy/12a.jpg" title="头条"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://tt6.jugd53.ml/wlqyhajiz/s513q" target="_blank">动态网</a> | <a href="https://tt6.jugd53.ml/wlqyhajiz/z11b" target="_blank">看中国</a> | <a href="https://git.io/fjHpI" target="_blank">新纪元</a> | <a href="https://tt6.jugd53.ml/wlqyhajiz/b12k" target="_blank">无界</a> | <a href="https://tt6.jugd53.ml/wlqyhajiz/b8j" target="_blank">退党</a> | <a href="https://git.io/fjHpT" target="_blank">网门</a> | <a href="https://tt6.jugd53.ml/wlqyhajiz/a4x" target="_blank">神韵</a> | <a href="https://tt6.jugd53.ml/wlqyhajiz/u12s" target="_blank">圣缘</a> | <a href="https://tt6.jugd53.ml/wlqyhajiz/o3u" target="_blank">明慧网</a> | <a href="https://tt6.jugd53.ml/wlqyhajiz/z10i" target="_blank">正见网</a> | <a href="https://tt6.jugd53.ml/wlqyhajiz/o9k" target="_blank">希望之声</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> |<a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a ></p><p><a href="https://tt6.jugd53.ml/wlqyhajiz/w7l" target="_blank">大纪元</a> | <a href="https://tt6.jugd53.ml/wlqyhajiz/e5z" target="_blank">新唐人</a> | <a href="https://git.io/JervF" target="_blank">亚太台</a> | <a href="https://git.io/fjHpG" target="_blank">直播</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a > | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">罪恶</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/3t/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a > | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a > |<a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12212934.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/06/Capture-13-320x200.jpg"><p align="center">【最新疫情6·28】全球病例超过1000万</p></a>
+<a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12212934.md#1" title="【最新疫情6·28】全球病例超过1000万""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/Capture-13-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12216420.md#1" title="【一线采访】四川大暴雨亲历者谈惊魂一幕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/Unknown-10-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12216804.md#1" title="澳洲调查中共干政 工党华人顾问家遭搜查""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/09/australia-1296727_960_720-320x200.png">&nbsp;</a>
-<a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12212934.md#1" title="【最新疫情6·28】全球病例超过1000万""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/Capture-13-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12216630.md#1" title="【瘟疫与中共】秘鲁疫情陡然飙升的背后""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1217563323-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12216661.md#1" title="澳议员莫索尔曼如何成情报局调查对象？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/2020-06-27-18266-20200626001476435792-original-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12216563.md#1" title="分析：美国签证限制将制裁哪些中共官员""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1214459805-320x200.jpg">&nbsp;</a>
@@ -13,12 +13,12 @@
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12216076.md#1" title="加拿大前司法部长：中共是政治病毒""><img width="73" src="https://i.epochtimes.com/assets/uploads/2012/12/1212100115352052-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12214964.md#1" title="全球退党中心倡议：解体中共 远离瘟疫""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/06/Screen-Shot-2020-06-26-at-3.35.45-PM-320x200.png">&nbsp;</a>
 <p align="center"><a href="https://github.com/eonzy298/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://eonzy298.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12217021.md#1">成都老人牙痛难忍 用钢丝钳拔牙后被送入ICU</a><br>
+:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12212934.md#1">【最新疫情6·28】全球病例超过1000万</a><br>
+:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12217021.md#1">成都老人牙痛难忍 用钢丝钳拔牙后被送入ICU</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12216507.md#1">美国冷战武器今派用场：俄亥俄级核潜艇</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12216326.md#1">战机和直升机升空 美福特号新航母实战演习</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/27/n12216420.md#1">【一线采访】四川大暴雨亲历者谈惊魂一幕</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/28/n12216804.md#1">澳洲调查中共干政 工党华人顾问家遭搜查</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12212934.md#1">【最新疫情6·28】全球病例超过1000万</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12214374.md#1">30万燕郊人像蝼蚁爬向北京 文章被删</a><br>
 <a href="https://github.com/eonzy298/djy/blob/master/gb/20/6/26/n12215064.md#1">大陆洪灾 台商被令限期捐钱 不堪重负回台</a><br>
